# API-BolaMarcada

./: .dockerignore  .gitattributes  .gitignore  BackupMain.txt  Jenkinsfile  README.md  alembic.ini  database.py  docker-compose.ci.yml  docker-compose.yml  dockerfile  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-publish.yml  tests.yml
alembic/: env.py
alembic/versions/: 7b4e4da02969_initial_migration.py  899e336f752f_create_tables.py  8aa66d94db33_initial_migration.py  d6d395f5fc39_initial_migration.py  fa8c9a0d8890_initial_migration.py
core/: config.py  database.py
models/: __init__.py  models.py
routes/: __init__.py  availability_routes.py  booking_routes.py  field_routes.py  review_routes.py  sports_center_routes.py  user_routes.py
schemas/: availability_schemas.py  field_schemas.py  review_schemas.py  sports_center_schemas.py  user_schemas.py
scripts/: docker-entrypoint.sh  notify.py  run_tests.sh  upload_github_release.sh
services/: field_service.py  review_service.py  sports_center_service.py  user_service.py
tests/: README.md  auth_test.py  conftest.py  field_test.py  test_review.py  test_sports_center.py  tests_utils.py
utils/: security.py  validators.py
